# platform.upstream.fsck-msdos

./: CMakeLists.txt  LICENSE
packaging/: fsck-msdos.spec
src/: boot.c  check.c  dir.c  fat.c  main.c
